--- a/lib/templates/app/test.html
+++ b/lib/templates/app/test.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title><%= moduleName %> [component] - SUIT</title>
-        <link rel="stylesheet" href="<%= moduleFileName %>">
-        <style></style>
-    </head>
-    <body>
-        <h1>SUIT <%= moduleName %> [component]</h1>
-        <p>This is a test page for the <a href="https://github.com/user/<%= modulePackageName %>">SUIT <%= moduleName %></a> component.</p>
+<meta charset="utf-8">
+<title><%= _.classify(moduleName) %> [component] - SUIT</title>
+<link rel="stylesheet" href="build/build.css">
+<style>
+    /* CSS to help implement and/or expose the test */
+</style>
 
-        <div class="<%= _.classify(moduleName) %>">
+<div class="Test">
+    <h1 class="Test-title">SUIT CSS: <a href="https://github.com/repo/<%= modulePackageName %>"><%= _.classify(moduleName) %></a> component tests</h1>
 
-        </div>
-    </body>
-</html>
+    <h2 class="Test-describe">.<%= _.classify(moduleName) %></h2>
+
+    <h3 class="Test-it">renders</h3>
+    <div class="Test-run" id="renders">
+        <!-- component configuration 1 -->
+        <div class="<%= _.classify(moduleName) %>"></div>
+    </div>
+
+    <h3 class="Test-it">does something else</h3>
+    <div class="Test-run" id="test2">
+        <!-- component configuration 2 -->
+        <div class="<%= _.classify(moduleName) %>"></div>
+    </div>
+
+    <h2 class="Test-describe">.<%= _.classify(moduleName) %>--modifier</h2>
+
+    <h3 class="Test-it">renders differently</h3>
+    <div class="Test-run" id="test3">
+        <!-- component configuration 1 -->
+        <div class="<%= _.classify(moduleName) %>--modifier"></div>
+    </div>
+</div>
