--- a/lib/templates/app/test/index.html
+++ b/lib/templates/app/test/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title><%= _.classify(moduleName) %> [component] - SUIT</title>
-<meta name="viewport" content="initial-scale=1,width=device-width">
-<link rel="stylesheet" href="build/build.css">
+<title><%= _.classify(moduleName) %> [component] - suit</title>
+<link rel="stylesheet" href="../build/test.css">
 <style>
   /* CSS to help implement and/or expose the test */
 </style>
