--- a/generators/app/templates/test/index.html
+++ b/generators/app/templates/test/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title><%= _.classify(moduleName) %> [component] - suit</title>
+<title><%= moduleCssName %> [<%= moduleType %>] - suit</title>
 <link rel="stylesheet" href="../build/test.css">
 <style>
   /* CSS to help implement and/or expose the test */
 </style>
 
 <div class="Test">
-  <h1 class="Test-title">SUIT CSS: <a href="https://github.com/suitcss/<%= modulePackageName %>"><%= _.classify(moduleName) %></a> component tests</h1>
+  <h1 class="Test-title">SUIT CSS: <a href="https://github.com/<%= moduleAuthorGithubUsername %>/<%= modulePackageName %>"><%= moduleCssName %></a> tests</h1>
 
-  <h2 class="Test-describe">.<%= _.classify(moduleName) %></h2>
+  <h2 class="Test-describe">.<%= moduleCssName %></h2>
   <h3 class="Test-it">renders</h3>
   <div class="Test-run" id="renders">
     <!-- component configuration 1 -->
-    <div class="<%= _.classify(moduleName) %>"></div>
+    <div class="<%= moduleCssName %>"></div>
   </div>
   <h3 class="Test-it">does something else</h3>
   <div class="Test-run" id="test2">
     <!-- component configuration 2 -->
-    <div class="<%= _.classify(moduleName) %>"></div>
+    <div class="<%= moduleCssName %>"></div>
   </div>
-
-  <h2 class="Test-describe">.<%= _.classify(moduleName) %>--modifier</h2>
+  <% if (moduleType == 'components') { %>
+  <h2 class="Test-describe">.<%= moduleCssName %>--modifier</h2>
   <h3 class="Test-it">renders differently</h3>
   <div class="Test-run" id="test3">
     <!-- component configuration 1 -->
-    <div class="<%= _.classify(moduleName) %>--modifier"></div>
-  </div>
+    <div class="<%= moduleCssName %>--modifier"></div>
+  </div><% } %>
 </div>
