Standardize package.json

--- a/generators/app/templates/test/index.html
+++ b/generators/app/templates/test/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title><%= moduleCssName %> [<%= moduleType %>] - suit</title>
+<title><%= moduleCssName %> [<%= moduleType %>] - SUITCSS</title>
 <link rel="stylesheet" href="../build/test.css">
 <style>
   /* CSS to help implement and/or expose the test */
