app/templates + rename suit to particle

--- a/generators/app/templates/test/index.html
+++ b/generators/app/templates/test/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title><%= moduleCssName %> [<%= moduleType %>] - SUITCSS</title>
+<title><%= moduleCssName %> [<%= moduleType %>] - PARTICLECSS</title>
 <link rel="stylesheet" href="../build/test.css">
 <style>
   /* CSS to help implement and/or expose the test */
 </style>
 
 <div class="Test">
-  <h1 class="Test-title">SUIT CSS: <a href="https://github.com/<%= moduleAuthorGithubUsername %>/<%= modulePackageName %>"><%= moduleCssName %></a> tests</h1>
+  <h1 class="Test-title">PARTICLE CSS: <a href="https://github.com/<%= moduleAuthorGithubUsername %>/<%= modulePackageName %>"><%= moduleCssName %></a> tests</h1>
 
   <h2 class="Test-describe">.<%= moduleCssName %></h2>
   <h3 class="Test-it">renders</h3>
